logs/typogrify-engineer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smartypants-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/typogrify'...
Listing './lib/python3.5/site-packages/typogrify/templatetags'...
Compiling './lib/python3.5/site-packages/typogrify/templatetags/jinja_filters.py'...
***   File "./lib/python3.5/site-packages/typogrify/templatetags/jinja_filters.py", line 19
    except TypogrifyError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/typogrify/templatetags/typogrify_tags.py'...
***   File "./lib/python3.5/site-packages/typogrify/templatetags/typogrify_tags.py", line 25
    except TypogrifyError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/typogrify_engineer-2.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
